renaming mpl to mpl2 everywhere to avoid confusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,13 @@ project(mpl2 CXX)
 
 find_package(Boost 1.57 REQUIRED)
 
-set(BOOST_MPL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
-set(BOOST_MPL_INCLUDE_DIRS ${BOOST_MPL_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
+set(BOOST_MPL2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(BOOST_MPL2_INCLUDE_DIRS ${BOOST_MPL2_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
 
-file(GLOB_RECURSE BOOST_MPL_HEADERS ${BOOST_MPL_INCLUDE_DIR}/*.hpp)
+file(GLOB_RECURSE BOOST_MPL2_HEADERS ${BOOST_MPL2_INCLUDE_DIR}/*.hpp)
 
-add_custom_target(mpl2 SOURCES ${BOOST_MPL_HEADERS})
-install(FILES ${BOOST_MPL_HEADERS} DESTINATION include)
+add_custom_target(mpl2 SOURCES ${BOOST_MPL2_HEADERS})
+install(FILES ${BOOST_MPL2_HEADERS} DESTINATION include)
 
 if(BUILD_TESTS)
     add_subdirectory(test EXCLUDE_FROM_ALL)
