--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@
 
 cmake_minimum_required(VERSION 2.8.3)
 
-option(BUILD_TESTS "build test scripts" ON)
-
 project(mpl2 CXX)
 
 find_package(Boost 1.57 REQUIRED)
@@ -18,7 +16,8 @@ file(GLOB_RECURSE BOOST_MPL2_HEADERS ${BOOST_MPL2_INCLUDE_DIR}/*.hpp)
 add_custom_target(mpl2 SOURCES ${BOOST_MPL2_HEADERS})
 install(FILES ${BOOST_MPL2_HEADERS} DESTINATION include)
 
-if(BUILD_TESTS)
+option(BOOST_MPL2_BUILD_TESTS "build test scripts" ON)
+if(BOOST_MPL2_BUILD_TESTS)
     add_subdirectory(test EXCLUDE_FROM_ALL)
 endif()
 
