--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake"]
 	path = cmake
-	url = git@github.com:brunocodutra/cmake-utilities.git
+	url = https://github.com/brunocodutra/cmake-utilities.git
