dropping support to standards older than c++11

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,21 +37,30 @@ file(GLOB_RECURSE BOOST_MPL2_TEST_SOURCES "*.cpp")
 include_directories(${BOOST_MPL2_INCLUDE_DIRS})
 link_directories(${BOOST_MPL2_LIBRARY_DIRS})
 
-set(BOOST_MPL2_TEST_DIALECTS c++98 c++03 c++11 c++14)
+option(BOOST_MPL2_ENABLE_CXX11 "test c++11" ON)
+if(BOOST_MPL2_ENABLE_CXX11)
+    set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} c++11)
+endif()
+
+option(BOOST_MPL2_ENABLE_CXX14 "test c++14" ON)
+if(BOOST_MPL2_ENABLE_CXX14)
+    set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} c++14)
+endif()
 
 if(CXX_COMPILER_IS_MSVC)
-    option(BOOST_MPL2_TEST_MSVC_DIALECTS "test msvc dialects" ON)
-    if(BOOST_MPL2_TEST_MSVC_DIALECTS)
-        set(BOOST_MPL2_TEST_DIALECTS ${BOOST_MPL2_TEST_DIALECTS} msvc++)
+    option(BOOST_MPL2_ENABLE_MSVC_DIALECTS "test msvc dialects" OFF)
+    if(BOOST_MPL2_ENABLE_MSVC_DIALECTS)
+        set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} msvc++)
     endif()
 else()
-    option(BOOST_MPL2_TEST_GNU_DIALECTS "test gnu dialects" ON)
-    if(BOOST_MPL2_TEST_GNU_DIALECTS)
-        set(BOOST_MPL2_TEST_DIALECTS ${BOOST_MPL2_TEST_DIALECTS} gnu++98 gnu++03 gnu++11 gnu++14)
+    option(BOOST_MPL2_ENABLE_GNU_DIALECTS "test gnu dialects" OFF)
+    if(BOOST_MPL2_ENABLE_GNU_DIALECTS)
+        string(REGEX REPLACE "[cC][+][+]" "gnu++" BOOST_MPL2_ENABLED_GNU_DIALECTS "${BOOST_MPL2_ENABLED_DIALECTS}")
+        set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} ${BOOST_MPL2_ENABLED_GNU_DIALECTS})
     endif()
 endif()
 
-foreach(dialect ${BOOST_MPL2_TEST_DIALECTS})
+foreach(dialect ${BOOST_MPL2_ENABLED_DIALECTS})
     set(dialect_flag)
     language_dialect_flags(CXX ${dialect} dialect_flag)
     foreach(SOURCE ${BOOST_MPL2_TEST_SOURCES})
