tentatively removing dependency on boost libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,8 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(Boost.MPL2 CXX)
 
-find_package(Boost 1.57 REQUIRED)
-
 set(BOOST_MPL2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
-set(BOOST_MPL2_INCLUDE_DIRS ${BOOST_MPL2_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
+set(BOOST_MPL2_INCLUDE_DIRS ${BOOST_MPL2_INCLUDE_DIR})
 
 file(GLOB_RECURSE BOOST_MPL2_HEADERS ${BOOST_MPL2_INCLUDE_DIR}/*.hpp)
 
