making it possible to disable extra warnings and strict behavior
strict behavior defaults to false now

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,19 +14,27 @@ include(Diagnostics)
 include(Strict)
 include(Dialects)
 
-extra_warnings_flags(CXX BOOST_MPL2_EXTRA_COMPILE_FLAGS)
 diagnostics_flags(CXX BOOST_MPL2_EXTRA_COMPILE_FLAGS)
-strict_behavior_flags(CXX BOOST_MPL2_EXTRA_COMPILE_FLAGS)
-list(APPEND BOOST_MPL2_EXTRA_COMPILE_FLAGS
-    -Wno-c++98-compat
-    -Wno-c++98-compat-pedantic
-    -Wno-disabled-macro-expansion
-)
 
-if(CXX_COMPILER_IS_CLANG)
+option(BOOST_MPL2_ENABLE_EXTRA_WARNINGS "enable extra warnings" ON)
+if(BOOST_MPL2_ENABLE_EXTRA_WARNINGS)
+    extra_warnings_flags(CXX BOOST_MPL2_EXTRA_COMPILE_FLAGS)
     list(APPEND BOOST_MPL2_EXTRA_COMPILE_FLAGS
-        -Wno-unused-local-typedef
+        -Wno-c++98-compat
+        -Wno-c++98-compat-pedantic
+        -Wno-disabled-macro-expansion
     )
+
+    if(CXX_COMPILER_IS_CLANG)
+        list(APPEND BOOST_MPL2_EXTRA_COMPILE_FLAGS
+            -Wno-unused-local-typedef
+        )
+    endif()
+endif()
+
+option(BOOST_MPL2_ENABLE_STRICT_BEHAVIOR "enable strict behavior" OFF)
+if(BOOST_MPL2_ENABLE_STRICT_BEHAVIOR)
+    strict_behavior_flags(CXX BOOST_MPL2_EXTRA_COMPILE_FLAGS)
 endif()
 
 add_compile_flags_globally("${BOOST_MPL2_EXTRA_COMPILE_FLAGS}")
@@ -37,23 +45,23 @@ file(GLOB_RECURSE BOOST_MPL2_TEST_SOURCES "*.cpp")
 include_directories(${BOOST_MPL2_INCLUDE_DIRS})
 link_directories(${BOOST_MPL2_LIBRARY_DIRS})
 
-option(BOOST_MPL2_ENABLE_CXX11 "test c++11" ON)
+option(BOOST_MPL2_ENABLE_CXX11 "enable c++11" ON)
 if(BOOST_MPL2_ENABLE_CXX11)
     set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} c++11)
 endif()
 
-option(BOOST_MPL2_ENABLE_CXX14 "test c++14" ON)
+option(BOOST_MPL2_ENABLE_CXX14 "enable c++14" ON)
 if(BOOST_MPL2_ENABLE_CXX14)
     set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} c++14)
 endif()
 
 if(CXX_COMPILER_IS_MSVC)
-    option(BOOST_MPL2_ENABLE_MSVC_DIALECTS "test msvc dialects" OFF)
+    option(BOOST_MPL2_ENABLE_MSVC_DIALECTS "enable msvc dialects" OFF)
     if(BOOST_MPL2_ENABLE_MSVC_DIALECTS)
         set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} msvc++)
     endif()
 else()
-    option(BOOST_MPL2_ENABLE_GNU_DIALECTS "test gnu dialects" OFF)
+    option(BOOST_MPL2_ENABLE_GNU_DIALECTS "enable gnu dialects" OFF)
     if(BOOST_MPL2_ENABLE_GNU_DIALECTS)
         string(REGEX REPLACE "[cC][+][+]" "gnu++" BOOST_MPL2_ENABLED_GNU_DIALECTS "${BOOST_MPL2_ENABLED_DIALECTS}")
         set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} ${BOOST_MPL2_ENABLED_GNU_DIALECTS})
