setting CXX on the build matrix doesn't seem to work as expected

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ sudo: required
 
 env:
      matrix:
-        - CXX=g++       GCC_VERSION=4.7
-        - CXX=g++       GCC_VERSION=4.8
-        - CXX=g++       GCC_VERSION=4.9
-        - CXX=clang++   CLANG_VERSION=3.2
-        - CXX=clang++   CLANG_VERSION=3.3
-        - CXX=clang++   CLANG_VERSION=3.4
-        - CXX=clang++   CLANG_VERSION=3.5
-        - CXX=clang++   CLANG_VERSION=3.6
-        - CXX=clang++   CLANG_VERSION=3.7
+        # - COMPILER=g++       COMPILER_VERSION=4.7
+        - COMPILER=g++      COMPILER_VERSION=4.8
+        - COMPILER=g++      COMPILER_VERSION=4.9
+        - COMPILER=clang    COMPILER_VERSION=3.2
+        - COMPILER=clang    COMPILER_VERSION=3.3
+        - COMPILER=clang    COMPILER_VERSION=3.4
+        - COMPILER=clang    COMPILER_VERSION=3.5
+        - COMPILER=clang    COMPILER_VERSION=3.6
+        - COMPILER=clang    COMPILER_VERSION=3.7
     
 before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
@@ -28,15 +28,13 @@ before_install:
     - sudo apt-get -qq update
     
 install:
-    - if [ "$CXX" == "g++" ]; then sudo apt-get -qq install g++-${GCC_VERSION}; fi
-    - if [ "$CXX" == "clang++" ]; then sudo apt-get -qq install clang-${CLANG_VERSION}; fi
+    - sudo apt-get -qq install ${COMPILER}-${COMPILER_VERSION}
 
 before_script:
     - mkdir build
     - cd build
-    - if [ "$CXX" == "g++" ]; then cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/g++-${GCC_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=ON -DBOOST_MPL2_ENABLE_CXX14=OFF -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON; fi
-    
-    - if [ "$CXX" == "clang++" ]; then cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++-${CLANG_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=ON -DBOOST_MPL2_ENABLE_CXX14=ON -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON; fi
+    - if [ "$COMPILER" == "g++" ]; then (export CXX=g++ && cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/g++-${COMPILER_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=ON -DBOOST_MPL2_ENABLE_CXX14=OFF -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON); fi
+    - if [ "$COMPILER" == "clang" ]; then (export CXX=clang++ && cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++-${COMPILER_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=ON -DBOOST_MPL2_ENABLE_CXX14=ON -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON); fi
     
 script:
     - make tests
