selecting c++ standards per compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,14 @@ sudo: required
 
 env:
      matrix:
-        # - COMPILER=g++       COMPILER_VERSION=4.7
-        - COMPILER=g++      COMPILER_VERSION=4.8
-        - COMPILER=g++      COMPILER_VERSION=4.9
-        - COMPILER=clang    COMPILER_VERSION=3.2
-        - COMPILER=clang    COMPILER_VERSION=3.3
-        - COMPILER=clang    COMPILER_VERSION=3.4
-        - COMPILER=clang    COMPILER_VERSION=3.5
-        - COMPILER=clang    COMPILER_VERSION=3.6
-        - COMPILER=clang    COMPILER_VERSION=3.7
+        - COMPILER=g++      COMPILER_VERSION=4.8 ENABLE_CXX11=ON ENABLE_CXX14=OFF
+        - COMPILER=g++      COMPILER_VERSION=4.9 ENABLE_CXX11=ON ENABLE_CXX14=ON
+        - COMPILER=clang    COMPILER_VERSION=3.2 ENABLE_CXX11=ON ENABLE_CXX14=ON
+        - COMPILER=clang    COMPILER_VERSION=3.3 ENABLE_CXX11=ON ENABLE_CXX14=OFF
+        - COMPILER=clang    COMPILER_VERSION=3.4 ENABLE_CXX11=ON ENABLE_CXX14=OFF
+        - COMPILER=clang    COMPILER_VERSION=3.5 ENABLE_CXX11=ON ENABLE_CXX14=OFF
+        - COMPILER=clang    COMPILER_VERSION=3.6 ENABLE_CXX11=ON ENABLE_CXX14=ON
+        - COMPILER=clang    COMPILER_VERSION=3.7 ENABLE_CXX11=ON ENABLE_CXX14=ON
     
 before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
@@ -33,8 +32,8 @@ install:
 before_script:
     - mkdir build
     - cd build
-    - if [ "$COMPILER" == "g++" ]; then (export CXX=g++ && cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/g++-${COMPILER_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=ON -DBOOST_MPL2_ENABLE_CXX14=OFF -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON); fi
-    - if [ "$COMPILER" == "clang" ]; then (export CXX=clang++ && cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++-${COMPILER_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=ON -DBOOST_MPL2_ENABLE_CXX14=ON -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON); fi
+    - if [ "$COMPILER" == "g++" ]; then (export CXX=g++ && cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/g++-${COMPILER_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=${ENABLE_CXX11} -DBOOST_MPL2_ENABLE_CXX14=${ENABLE_CXX14} -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON); fi
+    - if [ "$COMPILER" == "clang" ]; then (export CXX=clang++ && cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++-${COMPILER_VERSION} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=ON -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF -DBOOST_MPL2_ENABLE_CXX11=${ENABLE_CXX11} -DBOOST_MPL2_ENABLE_CXX14=${ENABLE_CXX14} -DBOOST_MPL2_ENABLE_GNU_DIALECTS=ON); fi
     
 script:
     - make tests
