--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
-language: cpp   
+language: c++   
 os: linux
 sudo: required
 
