--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -38,30 +38,11 @@ file(GLOB_RECURSE BOOST_MPL2_TEST_SOURCES "*.cpp")
 include_directories(${BOOST_MPL2_INCLUDE_DIRS})
 link_directories(${BOOST_MPL2_LIBRARY_DIRS})
 
-option(BOOST_MPL2_ENABLE_CXX11 "enable c++11" ON)
-if(BOOST_MPL2_ENABLE_CXX11)
-    set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} c++11)
+if(NOT BOOST_MPL2_CXX_DIALECTS)
+    set(BOOST_MPL2_CXX_DIALECTS c++11)
 endif()
 
-option(BOOST_MPL2_ENABLE_CXX14 "enable c++14" ON)
-if(BOOST_MPL2_ENABLE_CXX14)
-    set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} c++14)
-endif()
-
-if(CXX_COMPILER_IS_MSVC)
-    option(BOOST_MPL2_ENABLE_MSVC_DIALECTS "enable msvc dialects" OFF)
-    if(BOOST_MPL2_ENABLE_MSVC_DIALECTS)
-        set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} msvc++)
-    endif()
-else()
-    option(BOOST_MPL2_ENABLE_GNU_DIALECTS "enable gnu dialects" OFF)
-    if(BOOST_MPL2_ENABLE_GNU_DIALECTS)
-        string(REGEX REPLACE "[cC][+][+]" "gnu++" BOOST_MPL2_ENABLED_GNU_DIALECTS "${BOOST_MPL2_ENABLED_DIALECTS}")
-        set(BOOST_MPL2_ENABLED_DIALECTS ${BOOST_MPL2_ENABLED_DIALECTS} ${BOOST_MPL2_ENABLED_GNU_DIALECTS})
-    endif()
-endif()
-
-foreach(dialect ${BOOST_MPL2_ENABLED_DIALECTS})
+foreach(dialect ${BOOST_MPL2_CXX_DIALECTS})
     set(dialect_flag)
     language_dialect_flags(CXX ${dialect} dialect_flag)
     if(NOT "${dialect_flag}" MATCHES "-NOTFOUND$")
