trying to fix travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,5 @@ before_script:
     - cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/${COMPILER} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=OFF -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF
     
 script:
-    - /usr/bin/bash -c "time make mpl2.test"
+    - time make mpl2.test
     - ctest --output-on-failure
