adding indirection to call<> in order to avoid errors on gcc < 5

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,4 @@ before_script:
     - cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/${COMPILER} -DBOOST_MPL2_ENABLE_EXTRA_WARNINGS=OFF -DBOOST_MPL2_ENABLE_STRICT_BEHAVIOR=OFF
     
 script:
-    - time make mpl2.test
-    - ctest --output-on-failure
+    - time make mpl2.test && ctest --output-on-failure
