--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ build_script:
     - cmd: cd "%APPVEYOR_BUILD_FOLDER%\build"
 
     - cmd: cmake -DMETAL_ENABLE_WARNINGS=OFF -G"%GENERATOR%" "%APPVEYOR_BUILD_FOLDER%"
-    - cmd: cmake --build "%APPVEYOR_BUILD_FOLDER%\build" --config %CONFIG% --target metal
+    - cmd: cmake --build "%APPVEYOR_BUILD_FOLDER%\build" --config %CONFIG% --target metal.test
 
 test_script:
     - cmd: ctest --output-on-failure
