--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# merge backups 
+# merge backups
 *.orig
 
 # cmake
@@ -9,5 +9,5 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 
-# build directory
 build/
+gh-pages/
